--- a/seller/pom.xml
+++ b/seller/pom.xml
@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ite.jp.ak.lab06</groupId>
-  <artifactId>customer</artifactId>
+  <artifactId>seller</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>customer</name>
+  <name>seller</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,12 +24,6 @@
       <artifactId>javafx-fxml</artifactId>
       <version>17.0.6</version>
     </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.30</version>
-      <scope>optional</scope>
-    </dependency>
 
 <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -42,6 +36,12 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>optional</scope>
     </dependency>
     <dependency>
       <groupId>ite.jp.ak.lab06</groupId>
@@ -77,7 +77,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>ite.jp.ak.lab06.customer/ite.jp.ak.lab06.customer.CustomerApplication</mainClass>
+              <mainClass>ite.jp.ak.lab06.seller/ite.jp.ak.lab06.seller.SellerApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
